fixed channels so that background doesnt bleed into footer

--- a/src/Promo.css
+++ b/src/Promo.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
 
-    height: 79.4vh;
+    height: 79.4%;
     border-top-left-radius: 150px;
     border-top-right-radius: 150px;
     box-shadow: 0 0 0 8px rgb(166, 166, 166);
