--- a/src/projects/BisBlue.css
+++ b/src/projects/BisBlue.css
@@ -1,5 +1,5 @@
 .BisBlue {
-    height: 79.4vh;
+    height: 79.4%;
     background-color: rgba(0, 0, 0, 0.95);
     border-top-left-radius: 150px;
     border-top-right-radius: 150px;
