--- a/src/projects/Exedra.css
+++ b/src/projects/Exedra.css
@@ -1,9 +1,10 @@
 .Exedra {
-    height: 79.4vh;
+    height: 79.4%;
     background-color: rgba(0, 0, 0, 0.95);
     border-top-left-radius: 150px;
     border-top-right-radius: 150px;
     box-shadow: 0 0 0 8px rgb(166, 166, 166);
+    overflow:hidden;
 }
 
 .ex__image {
